# lawdocx

./: .gitignore  README.md  SCHEMA.md  pyproject.toml  schema.json
.github/workflows/: publish-to-pypi.yml
scripts/: generate_docx_fixtures.py
src/lawdocx/: __init__.py  audit.py  boilerplate.py  brackets.py  changes.py  cli.py  comments.py  footnotes.py  highlights.py  io_utils.py  metadata.py  models.py  outline.py  todos.py  utils.py
tests/: __init__.py  docx_factory.py  test_boilerplate.py  test_brackets.py  test_changes.py  test_cli.py  test_cli_audit.py  test_cli_boilerplate.py  test_cli_brackets.py  test_cli_changes.py  test_cli_comments.py  test_cli_footnotes.py  test_cli_highlights.py  test_cli_metadata.py  test_cli_outline.py  test_cli_todos.py  test_comments.py  test_dependencies.py  test_footnotes.py  test_highlights.py  test_metadata.py  test_outline.py  test_todos.py
