[project]
name = "lawdocx"
version = "0.1.0"
description = "Little tools for dealing with docx files, useful for lawyers and their LLMs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.1.0",
    "docx2python>=2.0.0",
    "lxml>=4.9.0",
]

[project.scripts]
lawdocx = "lawdocx.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=lawdocx --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
